Fix overlapping footer issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+/* Layout */
+body {
+  margin-bottom: 87px
+}
+
 /* Navbar */
 .navbar-brand,
 .nav-link {
@@ -51,10 +56,6 @@
 }
 
 .footer {
-  position: absolute;
-  bottom: 87px;
-  left: 0;
-  right: 0;
   width: 100%;
 }
 
